--- a/src/styles/css/dashboard.css
+++ b/src/styles/css/dashboard.css
@@ -6,7 +6,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url('../../images/graph.jpg');
+    background-image: url('./../../public/images/graph.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
