--- a/src/styles/css/navbar.css
+++ b/src/styles/css/navbar.css
@@ -1,4 +1,22 @@
-.logo{
-    max-width:100px;
-    height: auto; 
+.logo img {
+    max-width: 100px;
+    height: auto;
+}
+.customColor{
+    background-color: black;
+}
+.nav-item{
+    border: solid 2px white;
+    border-radius: 5px;
+    margin-right: 5px;
+}
+
+.customLink{
+    color:white !important;
+}
+.customLink:hover {
+    color: #636363 !important; /* Светлее при наведении */
+}
+.navbar-nav {
+    margin-left: auto;
 }
