--- a/src/styles/css/navbar.css
+++ b/src/styles/css/navbar.css
@@ -6,8 +6,6 @@
   background-color: black;
 }
 .nav-item{
-  border: solid 2px white;
-  border-radius: 5px;
   margin-right: 5px;
 }
 
@@ -15,7 +13,7 @@
   color:white !important;
 }
 .customLink:hover {
-  color: #636363 !important; /* Светлее при наведении */
+  color: #636363 !important; 
 }
 .navbar-nav {
   margin-left: auto;
