--- a/src/styles/css/postsList.css
+++ b/src/styles/css/postsList.css
@@ -15,6 +15,7 @@
   border-radius: 20px;
   min-height: 450px;
   box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.2);
+  --bs-card-bg:black !important;
 }
 
 @media (max-width: 420px) {
@@ -83,6 +84,7 @@
   transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
   background-color: rgb(41, 41, 41);
   color: white !important;
+  
 }
 
 .card:hover .card-body {
@@ -104,15 +106,16 @@
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgb(0, 0, 0) 100%);
 }
 .btnList {
-  display: inline-flex;
-  align-items: center;
-  gap: 8px;
+  display: flex;
+  align-items: space-between;
+  --bs-btn-border-color:black !important;
+  --bs-btn-bg:black !important;
   padding: 10px 20px;
   font-size: 16px;
   font-weight: bold;
   border-radius: 8px;
   border: 2px solid transparent;
-  background: linear-gradient(270deg, #ffffff, #000000);
+  background: linear-gradient(270deg, #414141, #000000);
   background-size: 400% 400%;
   animation: gradientMove 5s ease infinite;
   color: white;
@@ -125,7 +128,7 @@
 .btnList:hover {
   transform: scale(1.05);
   box-shadow: 0 4px 15px rgba(255, 255, 255, 0.5);
-  border-color: white;
+  border-color: rgb(0, 0, 0) !important;
 }
 
 .btnList .icon {
