--- a/src/styles/css/postsList.css
+++ b/src/styles/css/postsList.css
@@ -1,5 +1,8 @@
-.lead {
-  color: #000000;
+.icon-list{
+  color:#00eeff;
+  margin-right: 4px;
+  margin-bottom: 2px;
+  font-size: 12px;
 }
 .card-img-top {
   background-color: black;
@@ -8,14 +11,14 @@
   margin: 10vh;
 }
 
-.card {
+.card-list {
   border: none;
   transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
   overflow: hidden;
   border-radius: 20px;
   min-height: 450px;
   box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.2);
-  --bs-card-bg:black !important;
+  --bs-card-bg: black !important;
 }
 
 @media (max-width: 420px) {
@@ -30,7 +33,6 @@
   background-repeat: no-repeat;
   background-position: center center;
   position: relative;
-  
 }
 
 .card-has-bg::before {
@@ -60,11 +62,16 @@
   );
 }
 
-.card-footer {
+.card-footer-list {
   background: none;
   border-top: none;
+  padding: 10px;
+  text-align: center;
+  min-height: 40px; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
 .card-footer .media img {
   border: solid 3px rgba(255, 255, 255, 0.3);
 }
@@ -80,20 +87,19 @@
   letter-spacing: 2px;
 }
 
-.card-body {
+.card-body-list {
   transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
   background-color: rgb(41, 41, 41);
   color: white !important;
-  
 }
 
-.card:hover .card-body {
+.card-list:hover .card-body-list {
   margin-top: -10px;
   transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
   background-color: rgb(41, 41, 41);
 }
 
-.card:hover {
+.card-list:hover {
   cursor: pointer;
   transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
   transform: translateY(-5px);
@@ -108,8 +114,8 @@
 .btnList {
   display: flex;
   align-items: space-between;
-  --bs-btn-border-color:black !important;
-  --bs-btn-bg:black !important;
+  --bs-btn-border-color: black !important;
+  --bs-btn-bg: black !important;
   padding: 10px 20px;
   font-size: 16px;
   font-weight: bold;
