--- a/src/styles/css/postsList.css
+++ b/src/styles/css/postsList.css
@@ -10,7 +10,13 @@
 .wrapper {
   margin: 10vh;
 }
-
+.title-list{
+  color: white;
+  font-weight: 800;
+  margin-bottom: 20px;
+  border-bottom: white 2px solid;
+  padding-bottom: 20px;
+}
 .card-list {
   border: none;
   transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
@@ -120,7 +126,6 @@
   font-size: 16px;
   font-weight: bold;
   border-radius: 8px;
-  border: 2px solid transparent;
   background: linear-gradient(270deg, #414141, #000000);
   background-size: 400% 400%;
   animation: gradientMove 5s ease infinite;
@@ -133,7 +138,7 @@
 
 .btnList:hover {
   transform: scale(1.05);
-  box-shadow: 0 4px 15px rgba(255, 255, 255, 0.5);
+  box-shadow: 0 4px 15px rgba(94, 94, 94, 0.5);
   border-color: rgb(0, 0, 0) !important;
 }
 
