--- a/src/styles/css/dashboard.css
+++ b/src/styles/css/dashboard.css
@@ -1,81 +1,21 @@
+.mainadmin {
+  padding: 20px;
+}
 
-.dashboard {
-    display: flex;
-    height: 80vh;
-    margin-left: 50px;
-    margin-top: 20px;
-  }
-  
-  .sidebar {
-    width: 250px;
-    background: #ffffff;
-    color: rgb(0, 0, 0);
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    border-radius: 10px;
-  }
-  
-  .sidebar h2 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  .sidebar ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .sidebar li {
-    margin: 15px 0;
-  }
-  
-  .sidebar a {
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    font-size: 18px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 10px;
-    border-radius: 5px;
-    transition: 0.3s;
-  }
-  
-  .sidebar a:hover {
-    background: #434444;
-    color:#ffffff;
-  }
-  
-  .content {
-    flex-grow: 1;
-    padding: 20px;
-  }
-  .sidebar-item {
-  display: flex;
-  justify-content: space-between;
+.icon-wrapper {
+  font-size: 2em; 
+}
+
+.card-admin {
   cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+  border: solid 1px #000;
+  border-radius: 5px;
+  padding: 6px;
 }
 
-.arrow {
-  margin-left: 10px;
+.card-admin:hover {
+  transform: scale(1.05);
 }
 
-.crud-menu {
-  padding-left: 20px;
-  list-style-type: none;
-}
 
-.crud-menu li {
-  margin-bottom: 5px;
-}
-
-.crud-menu li a {
-  text-decoration: none;
-  color: #333;
-}
-
-.crud-menu li a:hover {
-  color: #007bff;
-}
-  
