--- a/src/styles/css/homePage.css
+++ b/src/styles/css/homePage.css
@@ -1,7 +1,68 @@
 .carImg {
-    width: 100%;
-    height: 100vh; /* Ограничиваем высоту, но не на весь экран */
-    max-height: 600px; /* Ограничение по максимальной высоте */
-    object-fit: cover; /* Обрезает картинку, сохраняя пропорции */
-    transition: 0.3s;
+  width: 100%;
+  height: 90vh;
+  object-fit: cover;
+  padding: 0 !important;
+  position: relative;
+}
+.btnCalcImg {
+  display: none;
+}
+.titleSlideImg {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 2rem;
+  font-weight: 700;
+  text-align: center;
+  z-index: 10;
+  width: 80%;
+}
+.rightSide {
+  background-color: black;
+  position: relative;
+}
+.titleSlide {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: xxx-large;
+  font-weight: 1200;
+  text-align: top;
+}
+@media (max-width: 768px) {
+
+  .titleSlide {
+    display: none;
+  }
+  .rightSide {
+    display: none;
+  }
+  .carImg {
+    height: 50vh;
+    position: relative;
+    filter: blur(3px);
+  }
+  .titleSlideImg {
+    display: block;
+  }
+  .btnCalc {
+    display: none;
+  }
+  .btnCalc {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 3rem;
+    font-weight: 700;
+    text-align: top;
+  }
 }
