--- a/src/styles/css/homePage.css
+++ b/src/styles/css/homePage.css
@@ -1,3 +1,8 @@
+/* main style */
+.mainHome{
+  background-color: rgb(54, 54, 54);
+}
+/* carousel */
 .carImg {
   width: 100%;
   height: 90vh;
@@ -11,6 +16,7 @@
 .titleSlideImg {
   display: none;
   position: absolute;
+  font-family: "Cascadia Mono", sans-serif;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -35,8 +41,81 @@
   font-weight: 1200;
   text-align: top;
 }
-@media (max-width: 768px) {
+/* posts cards styles */
+.titleSection1{
+  color:white;
+}
+.subtitleSection1{
+  color:rgb(151, 151, 151);
+}
+.cardStylePost {
+  background-color: rgb(54, 54, 54);
+  border-radius: 10px;
+  border: none;
+  --bs-card-border-color: rgb(116, 116, 116) !important;
+  --bs-card-bg: rgb(72, 72, 72) !important;
+  --bs-card-box-shadow: 0px 0px 5px rgb(0, 0, 0) !important;
+  box-shadow: 0px 0px 10px rgb(16, 16, 16);
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  margin: 10px;
+  color:white;
+  font-family: "Cascadia Mono", sans-serif;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
 
+.cardStylePost:hover {
+  background-color: rgb(72, 72, 72);
+  box-shadow: 0px 0px 15px rgb(32, 32, 32);
+  transform: scale(1.05);
+}
+.strictLine{
+  color:rgb(196, 196, 196);
+}
+.containerImgPost{
+  height: 200px;
+  align-content: center;
+  overflow: hidden !important;
+}
+.containerImgPost img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.cardBodyPost{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  padding: 10px;
+}
+.card-text{
+  color: rgb(255, 255, 255);
+}
+.card-title{
+  color: rgb(255, 255, 255) !important;
+  border-bottom: 1px solid rgb(196, 196, 196);
+}
+.btn-default12{
+  background-color: rgb(54, 54, 54);
+  color: white;
+  border: none;
+  font-family: "Cascadia Mono", sans-serif;
+  font-size: large;
+  font-weight: 700;
+  transition: all 0.3s ease-in-out;
+  margin-top: auto; 
+  align-self: flex-end;
+}
+
+@media (max-width: 768px) {
+  
+  .cardBodyPost{
+    height: 100%;
+  }
   .titleSlide {
     display: none;
   }
@@ -50,6 +129,7 @@
   }
   .titleSlideImg {
     display: block;
+    font-family: "Cascadia Mono", sans-serif;
   }
   .btnCalc {
     display: none;
